facet-styx/src/snapshots/facet_styx__error__tests__invalid_scalar_diagnostic.snap
---
source: crates/facet-styx/src/error.rs
expression: rendered
---
error: failed to parse "notanumber" as u32
╭─> test.styx
1 │ name Alice
2 │ age notanumber
  │ ─── error here
  = note: at path: age
