facet-styx/src/snapshots/facet_styx__error__tests__missing_field_diagnostic.snap
---
source: crates/facet-styx/src/error.rs
expression: stripped
---
error: missing required field `age`
╭─> test.styx
1 │ name Alice
  │ ─ required by Person
  = help: add `age <value>`
  = note: at path: <root>
