facet-styx/src/snapshots/facet_styx__error__tests__unknown_field_diagnostic.snap
---
source: crates/facet-styx/src/error.rs
expression: rendered
---
error: unknown field `unknown_field`
╭─> test.styx
1 │ name Alice
2 │ unknown_field value
  │ ───────────── unknown field
  = note: at path: <root>
